# Disk_Health_Monitor

./: AGENT.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  requirements.txt  requirements_dev.txt
src/disk_health/: __init__.py  __main__.py  benchmark.py  dh_types.py  protocols.py  report_manager.py  smart.py  utils.py  workers.py
src/disk_health/ui/: __init__.py  benchmark_panel.py  device_panel.py  main_tabs.py  main_window.py  smart_data_panel.py
tests/: __init__.py  test_benchmark.py  test_benchmark_panel.py  test_dh_types.py  test_report_manager.py  test_smart.py  test_smart_data_panel.py  test_utils.py  test_workers.py
